--- a/src/main/webapp/pages/register_farmer.xhtml
+++ b/src/main/webapp/pages/register_farmer.xhtml
@@ -27,7 +27,7 @@ and open the template in the editor.
                         <div class="form-group">
                             <label class="small mb-1">First Name</label>
                             <h:inputText id="farmFName" styleClass="form-control" 
-                                         pt:placeholder="Enter something pls" 
+                                         pt:placeholder="Enter Firstname" 
                                          value="#{systemUserController.systemUser.firstname}"
                                          required="#{!empty param['saveFarmer']}" 
                                          requiredMessage="*required"/>
@@ -38,7 +38,7 @@ and open the template in the editor.
                         <div class="form-group">
                             <label class="small mb-1">Last Name</label>
                             <h:inputText id="farmLName" styleClass="form-control" 
-                                         pt:placeholder="Enter something pls" 
+                                         pt:placeholder="Enter Lastname" 
                                          value="#{systemUserController.systemUser.lastname}"
                                          required="#{!empty param['saveFarmer']}" 
                                          requiredMessage="*required"/>
@@ -64,7 +64,7 @@ and open the template in the editor.
                         <div class="form-group">
                             <label class="small mb-1">Phone Number</label>
                             <h:inputText id="farmPhoneNum" styleClass="form-control" 
-                                         pt:placeholder="Enter something pls" 
+                                         pt:placeholder="Enter Phonenumber" 
                                          value="#{systemUserController.systemUser.phoneNumber}"
                                          required="#{!empty param['saveFarmer']}" 
                                          requiredMessage="*required"/>
