--- a/src/main/webapp/pages/register_farm_details.xhtml
+++ b/src/main/webapp/pages/register_farm_details.xhtml
@@ -26,7 +26,7 @@ and open the template in the editor.
                     <div class="col-md-6">
                         <div class="form-group">
                             <label class="small mb-1" for="inputFirstName">Farm Name</label>
-                            <h:inputText styleClass="form-control" pt:placeholder="Enter something pls" 
+                            <h:inputText styleClass="form-control" pt:placeholder="Enter Farm Name" 
                                          value="#{farmDetailsController.farmDetail.name}"
                                          required="#{!empty param['saveFarmDetails']}" 
                                          requiredMessage="*required" id="farmeDetName"/>
@@ -53,7 +53,7 @@ and open the template in the editor.
                             <label class="small mb-1" for="inputLastName">Main Plantation</label>
                             <!--<h:inputText id="farmLName" styleClass="form-control" pt:placeholder="Enter something pls"/>-->
                             <h:inputTextarea rows="3" styleClass="form-control" id="farmDetMainPlant"
-                                             pt:placeholder="Enter something pls" 
+                                             pt:placeholder="Enter Main Plantation" 
                                              value="#{farmDetailsController.farmDetail.mainPlantation}" 
                                              required="#{!empty param['saveFarmDetails']}" 
                                              requiredMessage="*required"/>
@@ -64,7 +64,7 @@ and open the template in the editor.
                         <div class="form-group">
                             <label class="small mb-1" for="inputLastName">Location</label>
                             <h:inputTextarea rows="3" styleClass="form-control"  id="farmDetLoc"
-                                             pt:placeholder="Enter something pls" 
+                                             pt:placeholder="Enter Farm Location" 
                                              value="#{farmDetailsController.farmDetail.location}"
                                              required="#{!empty param['saveFarmDetails']}" 
                                              requiredMessage="*required"/>
