--- a/src/main/webapp/pages/search_farmer.xhtml
+++ b/src/main/webapp/pages/search_farmer.xhtml
@@ -17,73 +17,77 @@ and open the template in the editor.
     </head>
     <body>
         <ui:composition>
-            <h:form prependId="false">
-                <ol class="breadcrumb mb-4">
-                    <li class="breadcrumb-item active">Search Farmer</li>
-                </ol>
+            <ol class="breadcrumb mb-4">
+                <li class="breadcrumb-item active">Search Farmer</li>
+            </ol>
+            <h:panelGroup layout="block" rendered="#{!generalSearch.renderSearchedView}">
+                <h:form prependId="false">
+                    <h:panelGroup layout="block" styleClass="row">
+                        <h:panelGroup layout="block" styleClass="col-md-4">
+                            <h:outputLabel value="Search By: "/>
+                            <h:selectOneMenu styleClass="form-control" id="selectFarmer"
+                                             requiredMessage="Select One Criteria"
+                                             value="#{generalSearch.searchCriteria}">
+                                <f:selectItem itemValue="" itemLabel="---Select One---"/>
+                                <f:selectItem itemValue="firstname" itemLabel="Name"/>
+                                <f:selectItem itemValue="phoneNumber" itemLabel="Contact"/>
+                            </h:selectOneMenu>
+                        </h:panelGroup>
+                        <h:panelGroup layout="block" styleClass="col-md-4">
+                            <h:outputLabel value="Search Text: "/>
+                            <h:inputText id="searchFarmerText" styleClass="form-control" pt:placeholder="Search Text"
+                                         value="#{generalSearch.searchText}"/>
+                        </h:panelGroup>
+                        <h:panelGroup layout="block" styleClass="col-md-4">
+                            <h:commandButton value="Search" styleClass="btn btn-primary btn-fill" 
+                                             style="margin: 30px 3px 0 0" 
+                                             action="#{generalSearch.searchFarmer}"/>
+                            <h:commandButton value="Reset" styleClass="btn btn-primary btn-fill" 
+                                             style="margin: 30px 3px 0 0"
+                                             action="#{generalSearch.resetSearch}"/>
+                        </h:panelGroup>
+                    </h:panelGroup>
+                    <br/>
 
-                <h:panelGroup layout="block" styleClass="row">
-                    <h:panelGroup layout="block" styleClass="col-md-4">
-                        <h:outputLabel value="Search By: "/>
-                        <h:selectOneMenu styleClass="form-control" id="selectFarmer"
-                                         requiredMessage="Select One Criteria"
-                                         value="#{generalSearch.searchCriteria}">
-                            <f:selectItem itemValue="" itemLabel="---Select One---"/>
-                            <f:selectItem itemValue="firstname" itemLabel="Name"/>
-                            <f:selectItem itemValue="phoneNumber" itemLabel="Contact"/>
-                        </h:selectOneMenu>
+                    <h:panelGroup layout="block" class="row">
+                        <h:panelGroup layout="block" class="col-md-12">
+                            <!--resizableColumns="true" style="margin-bottom:20px"-->
+                            <p:dataTable var="search_farm_user" paginator="true" id="search_farmer_user"
+                                         paginatorPosition="bottom" rows="5" value="#{generalSearch.farmersDataTable}"
+                                         paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"                                     
+                                         currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
+                                         rowsPerPageTemplate="5,10,15" reflow="true">
+                                <f:facet name="header">
+                                    <h:outputText value="List of Farmers"/>
+                                </f:facet>
+                                <p:column headerText="Firstname" style="width: 150px">
+                                    <h:outputText value="#{search_farm_user.firstname}" />
+                                </p:column>
+                                <p:column headerText="Lastname" style="width: 150px">
+                                    <h:outputText value="#{search_farm_user.lastname}"/>
+                                </p:column>
+                                <p:column headerText="Gender" priority="3" style="width: 100px">
+                                    <h:outputText value="#{search_farm_user.gender}"/>
+                                </p:column>
+                                <p:column headerText="Status" style="width: 150px">
+                                    <h:outputText value="#{search_farm_user.accountStatus}"/>
+                                </p:column>
+                                <p:column headerText="Contact" style="width: 150px" priority="2">
+                                    <h:outputText value="#{search_farm_user.phoneNumber}"/>
+                                </p:column>
+                                <p:column headerText="Options" style="width: 100px">
+                                    <h:commandLink value="Select" style="text-decoration: underline;color: green"
+                                                   action="#{generalSearch.rowSelectFarmer}"/>
+                                </p:column>
+                            </p:dataTable> 
+                        </h:panelGroup>
                     </h:panelGroup>
-                    <h:panelGroup layout="block" styleClass="col-md-4">
-                        <h:outputLabel value="Search Text: "/>
-                        <h:inputText id="searchFarmerText" styleClass="form-control" pt:placeholder="Search Text"
-                                     value="#{generalSearch.searchText}"/>
-                    </h:panelGroup>
-                    <h:panelGroup layout="block" styleClass="col-md-4">
-                        <h:commandButton value="Search" styleClass="btn btn-primary btn-fill" 
-                                         style="margin: 30px 3px 0 0" 
-                                         action="#{generalSearch.searchFarmer}"/>
-                        <h:commandButton value="Reset" styleClass="btn btn-primary btn-fill" 
-                                         style="margin: 30px 3px 0 0"
-                                         action="#{generalSearch.resetSearch}"/>
-                    </h:panelGroup>
-                </h:panelGroup>
-                <br/>
+                </h:form>
+            </h:panelGroup>
 
-                <h:panelGroup layout="block" class="row">
-                    <h:panelGroup layout="block" class="col-md-12">
-                        <!--resizableColumns="true" style="margin-bottom:20px"-->
-                        <p:dataTable var="search_farm_user" paginator="true" id="search_farmer_user"
-                                     paginatorPosition="bottom" rows="5" value="#{generalSearch.farmersDataTable}"
-                                     paginatorTemplate="{CurrentPageReport} {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"                                     
-                                     currentPageReportTemplate="{startRecord}-{endRecord} of {totalRecords} records"
-                                     rowsPerPageTemplate="5,10,15" reflow="true">
-                            <f:facet name="header">
-                                <h:outputText value="List of Farmers"/>
-                            </f:facet>
-                            <p:column headerText="Firstname" style="width: 150px">
-                                <h:outputText value="#{search_farm_user.firstname}" />
-                            </p:column>
-                            <p:column headerText="Lastname" style="width: 150px">
-                                <h:outputText value="#{search_farm_user.lastname}"/>
-                            </p:column>
-                            <p:column headerText="Gender" priority="3" style="width: 100px">
-                                <h:outputText value="#{search_farm_user.gender}"/>
-                            </p:column>
-                            <p:column headerText="Status" style="width: 150px">
-                                <h:outputText value="#{search_farm_user.accountStatus}"/>
-                            </p:column>
-                            <p:column headerText="Contact" style="width: 150px" priority="2">
-                                <h:outputText value="#{search_farm_user.phoneNumber}"/>
-                            </p:column>
-                            <p:column headerText="Options" style="width: 100px">
-                                <h:commandLink value="Select" style="text-decoration: underline;color: green"
-                                               action="#{generalSearch.rowSelectFarmer}"/>
-                            </p:column>
-                        </p:dataTable> 
-                    </h:panelGroup>
-                </h:panelGroup>
-            </h:form>
-            <br/><br/><hr/>
+            <!--<br/><br/><hr/>-->
+
+
             <h:panelGroup layout="block" rendered="#{generalSearch.renderSearchedView}">
                 <h:form prependId="false">
 
